minor fixes to improve PMD and FindBugs reports
git-svn-id: https://svn.code.sf.net/p/jxls/code/trunk@294 0873f5a4-e61c-0410-97f5-bcdb7ec58e62